--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,15 @@ spring.jpa.show-sql=true
 books.max_allowed=3
 books.max_allowed_days=15
 books.fine.per_day=5
+
+
+
+
+#spring.datasource.username=root
+#spring.datasource.password=Y1012Jqkhkp
+#spring.datasource.url=jdbc:mysql://localhost:3306/BookMyShow01?createTableIfNotExists=true
+#spring.jpa.hibernate.ddl-auto=update
+#
+#server.port=9088
+
+#http://localhost:9088/swagger-ui/index.html
